@@ -1,6 +1,6 @@
 Package: plugdensity
-Version: 0.8-2
-Date: 2009-12-04
+Version: 0.8-3
+Date: 2011-11-30
 Title: Plug-in Kernel Density Estimation
 Author: Eva Herrmann <eherrmann@mathematik.tu-darmstadt.de> (C original);
 	R interface etc by Martin Maechler
