@@ -1,3 +1,0 @@
-.First.lib <- function(lib, pkg) library.dynam("plugdensity",pkg,lib)
-
-
